2007-11-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Add setup and teardown hooks to the programmer
	definition.  If present, call the setup hook immediately after
	finding the respective programmer object, and schedule the
	teardown hook to be called upon exit.  This allows the
	programmer implementation to dynamically allocate private
	programmer data.
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)
	* avr910.c: Convert static programmer data into dynamically
	allocated data.
	* butterfly.c: (Ditto.)
	* jtagmkI.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* stk500v2.c: (Ditto.)
	* usbasp.c: (Ditto.)
	* usbtiny.c: (Ditto.)

2007-11-06 Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: Remove the no_show_func_info() calls, as Brian
	promised some 4 years ago.

2007-11-06 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Add the -x option to pass extended parameters to
	the programmer backend.
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)
	* jtagmkII.c: Implement the extended parameter jtagchain=
	to support JTAG daisy-chains.
	* avrdude.1: Document all of the above.
	* doc/avrdude.texi: (Ditto.)

2007-10-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version for post-release.

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version, releasing avrdude-5.5.

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <bikenomad@gmail.com>:
	patch #5007: Patch for line-buffering of stdout and stderr
	* main.c: call setvbuf() for stdout and stderr.

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <graceindustries@gmail.com>:
	patch #5953: Add AT90CAN64 and AT90CAN32 to avrdude.conf
	* avrdude.conf.in: Add entry for AT90CAN64 and AT90CAN32.

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Wolfgang Moser:
	patch #6121: ISP support for the C2N232I device (serial port
	bitbanging)
	* avrdude.conf.in: Add entry for c2n232i.

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <karl.yerkes@gmail.com>: